package com.zrosfjord.recipes.domain;

public enum Difficulty {

    EASY, MODERATE, HARD

}
